--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.github.ivan-ig'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
@@ -15,21 +15,18 @@ repositories {
 
 ext {
     set('springCloudVersion', "2020.0.4")
+    set('springBootVersion', "2.5.5")
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.4'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation 'com.jayway.jsonpath:json-path:2.6.0'
-    implementation 'org.springframework.boot:spring-boot-starter-parent:2.5.5'
+    implementation "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
     annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.5'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
-
-//        testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
-//    testImplementation 'org.testng:testng:7.4.0'
-//    testImplementation 'org.mockito:mockito-all:1.10.19'
+    providedRuntime "org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
 
 dependencyManagement {
