Edit "giphy.no-change-gif-url" value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ giphy.app-id=3yv3NgwhLz5rsxkkEGEdATQifGMMagT2
 giphy.tag-rich=rich
 giphy.tag-broke=broke
 giphy.rating=g
-giphy.no-change-gif-url=https://media3.giphy.com/media/q6M0PEADcoyYJ1guuL/giphy.gif?cid=790b761172202f430b63c8b4a8e90a1c5559c159cca0b44e&rid=giphy.gif&ct=g
+giphy.no-change-gif-url=https://media3.giphy.com/media/q6M0PEADcoyYJ1guuL/giphy.gif
